--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "shell",
     "shell script"
   ],
-  "repository": "",
+  "repository": "https://github.com/andreventuravale/cp-tags",
   "author": "andreventuravale <andreventuravale@gmail.com>",
   "license": "BSD-3-Clause"
 }
